@@ -50,9 +50,4 @@ tasks {
       jvmTarget = "20"
     }
   }
-
-  test {
-    // required for jjwt 0.12 - see https://github.com/jwtk/jjwt/issues/849
-    jvmArgs("--add-exports", "java.base/sun.security.util=ALL-UNNAMED")
-  }
 }
